se modifico el front con el servicio webSocket

--- a/Frontend cartas/src/app/modules/game/pages/home/home.component.scss
+++ b/Frontend cartas/src/app/modules/game/pages/home/home.component.scss
@@ -32,6 +32,13 @@
     border-top-width: 1.8px;
     border-bottom-width: 1.8px;
 }
+
+.navbar{
+    background-color: rgb(17, 17, 17)!important;
+  }
+  .navbar-brand{
+    color: white;
+  }
 #boton{
     
     font-size: 25px;
