--- a/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.html
+++ b/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar bg-light" id="navar">
+<body>
+  <nav class="navbar bg-light" id="navar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="../assets/img/logo.png" alt="" width="30" height="35" class="d-inline-block align-text-top">
@@ -16,15 +17,69 @@
     </div>
 </div>
 <div class="partidad">
-    <div>
-        <li>
-            <span>PX:10</span>
-        </li>
+    <div class="tarjetas">
+            <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                    <span>PX:10</span>
+                    <br>
+                </div>
+               </div>
     </div>
 </div>
 <div class="mazo">
-    <li>
-        <span>PX:10</span>
-    </li>
-
+        <div class="card">
+            <div class="card2" id="card1">
+                <span>PX:10</span>
+                <br>
+                <button>Poner</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card2" id="card2">
+                <span>PX:10</span>
+                <br>
+                <button>Poner</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card2" id="card3">
+                <span>PX:10</span>
+                <br>
+                <button>Poner</button>
+            </div>
+          </div>
 </div>
+
+</body>
+
+
