se creo el servicio POST de CrearJuego

--- a/Frontend cartas/src/app/modules/game/pages/new-game/new-game.component.html
+++ b/Frontend cartas/src/app/modules/game/pages/new-game/new-game.component.html
@@ -12,14 +12,13 @@
 <h2>Crear Juego</h2>
 <form id = "frmJugadores"[formGroup]="frmJugadores" (ngSubmit)="frmJugadores.valid? submit():true">
     <select class ="select" name = "jugadores" multiple class="jugadores" formControlName = "jugadores">
-        <option *ngFor="let user of jugadores"[value]="user.id">{{user.name}}</option>
+        <option *ngFor="let user of jugadores"[value]="[user.id,user.name]">{{user.name}}</option>
     </select>
     <br>
     <div class="error"
      *ngIf="frmJugadores.get('jugadores')?.hasError('required')">Debes seleccionar por lo menos un juegador</div>
     <br>
-    <a routerLink="/juego" mat-flat-button color="primary" type="submit"[disabled]="frmJugadores.invalid">Crear Juego</a>
+    <button (click)="enviar()" mat-flat-button color="primary" type="submit"[disabled]="frmJugadores.invalid">Crear Juego</button>
 </form>
-<button (click)="enviar()"> enviar </button>
 </div>
 </body>
