--- a/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.scss
+++ b/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.scss
@@ -33,11 +33,11 @@
     border-radius: 30px;
     text-align: center;
     max-width: 65%;
-    max-height: 50px;
+    
     
   }
   .mazo{
-    background: #e31010;
+    background:#00000085;
     border-radius: 30px;
     display: grid;
     gap:1em ;
@@ -47,14 +47,14 @@
     left: 1700px;
     padding: 30px 30px;
     position: relative;
-    bottom:800px;
+    bottom:700px;
    
   }
 
   .tarjetas{
     display: flex;
     gap:1em ;
-    background-color: #e31010;
+    background:#000000b5;
     position: relative;
     height: 100%;
    max-width: 65%;
@@ -100,8 +100,5 @@
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
    }
 
-   #card1{
-  
-    background-size:cover ;
-   }
+   
   
