se trajo el  evento de terminar juego

--- a/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.html
+++ b/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.html
@@ -19,8 +19,8 @@
     <div class="tarjetas"  >
             <div class="card" *ngFor="let card of cartasDelTablero" >
               <div class="card2" id="card1">
-                <span>PX: {{card.poder}}</span>
-                <img  src="{{card.url}}" />
+                <span></span>
+                <img  src="https://i.pinimg.com/originals/db/b2/12/dbb2129035f83c491af200bb58e257cc.jpg" />
                   
               </div>
             </div>
