--- a/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.scss
+++ b/Frontend cartas/src/app/modules/game/pages/tablero/tablero.component.scss
@@ -72,8 +72,8 @@
     background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
     border-radius: 20px;
     transition: all .3s;
-    
-   
+    text-align: center;
+    top:50px;
    }
    
    .card2 {
@@ -100,5 +100,127 @@
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
    }
 
+//dispositivos extra largos
+   @media only screen and (max-width:1000px){
+
+    .tarjetas{
+      display: flex;
+      gap:1em ;
+      background:#000000b5;
+      position: relative;
+      height: 100%;
+     max-width: 50%;
+      padding: 200px;
+      border-radius: 30px;
+      text-align: center;
+      margin:40px ;
+      
+    }
+    .partidad{
+      background-color: rgba(110, 180, 245, 0.7);
+      border-radius: 30px;
+      text-align: center;
+      max-width: 25%;
+      
+      
+    }
+    
+    .descripcion{
+      background-color: rgba(6, 25, 43, 0.7);
+      border-radius: 30px;
+      text-align:left;
+      max-width: 50%;
+      padding: 30px 30px;
+      margin: 40px;
+      
+  
+  
+      // overflow: hidden;
+    }
+    .tiempo{
+      max-width: 80%;
+       display: flex;
+       justify-content: space-between;
+       position: relative;
+       left: 20%;
+       padding: 10px;
+       bottom: 5px;
+    
+      }
+
+    .mazo{
+      background:#00000085;
+      border-radius: 30px;
+      display: grid;
+      gap:2.7em ;
+      grid-template-columns: repeat(2,1fr);
+      text-align: center;
+      max-width: 25%;
+      left: 600px;
+      padding: 30px 30px;
+      position: relative;
+      bottom:760px;
+     
+    }
+
+    .card {
+      width: 140px;
+      height: 204px;
+      background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+      border-radius: 20px;
+      transition: all .3s;
+    
+     }
+    .card2 {
+      width: 140px;
+      height: 204px;
+      background-color: #1a1a1a;
+      border-radius:10px;
+      transition: all .2s;
+      
+     }
+     .card2 img{
+    width: 100%;
+    height: 116%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    bottom: 25px;
+    border-radius: 10px;
+     }
+
+     .card2 button{
+      z-index: 10;
+     }
+     .card2:hover {
+      transform: scale(0.98);
+      border-radius: 20px;
+     }
+     
+     .card:hover {
+      box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+     }
+
+     .contenedor-tableros{
+      background-color: #3700ff;
+     }
+
+
+
+   }
+  
+//dispositivos largos
+@media(max-width:992px){
+
+}
+
+//dispositivos medios
+@media(max-width:768px){
+
+}
+//mobiles
+@media(max-width:576px){
+
+}
    
   
